# loop_Engg

./: .gitignore  LICENSE  README.md  SKILL.md  loop-budget.md  package.json  test_read.py
.github/workflows/: doc-sync.yml  publish-pypi.yml
.loops/doc-sync/: LOOP.md  SKILL.md  STATE.md
assets/: interactive-picker-feature.md  skill-template.md
docs/: CONTRIBUTING.md  COST_GUIDE.md  DESIGN_CHECKLIST.md  FAILURE_MODES.md  LOOP_COMPOSITION.md  MODEL_SELECTION.md  OBSERVABILITY.md  RECOVERY.md  TRUST_RAMP.md  adopters.md
loops/accessibility-audit/: LOOP.md  SKILL.md  STATE.md
loops/api-consumer-notifier/: LOOP.md  SKILL.md  STATE.md
loops/api-contract-sync/: LOOP.md  SKILL.md  STATE.md
loops/changelog-drafter/: LOOP.md  SKILL.md  STATE.md
loops/ci-sweeper/: LOOP.md  SKILL.md  STATE.md
loops/code-repair/: LOOP.md  SKILL.md  STATE.md
loops/daily-triage/: LOOP.md  SKILL.md  STATE.md
loops/dependency-updater/: LOOP.md  SKILL.md  STATE.md
loops/doc-sync/: LOOP.md  STATE.md
loops/migration-writer/: LOOP.md  SKILL.md  STATE.md
patterns/: registry.yaml
skills/: cost-reporter.md  doc-writer.md  git-committer.md  issue-triager.md  pr-reviewer.md  test-runner.md
tools/loop-wizard/: README.md  pyproject.toml
tools/loop-wizard/loop_wizard/: __init__.py  cli.py  config.py
tools/loop-wizard/loop_wizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/loop-wizard/loop_wizard/commands/: __init__.py  audit.py  cost.py  dashboard.py  init.py  picker.py  status.py
tools/loop-wizard/tests/: test_picker.py
(+11 files in other folders)
